--- a/public/index.html
+++ b/public/index.html
@@ -23,4 +23,12 @@
 
 <body style="background-color: #fbfbfb;">
 </body>
+<script src="assets/js/jquery.min.js"></script>
+<script src="assets/js/popper.js"></script>
+<script src="assets/js/tooltip.js"></script>
+<script src="assets/js/bootstrap.min.js"></script>
+<script src="assets/js/jquery.nicescroll.min.js"></script>
+<script src="assets/js/stisla.js"></script>
+<script src="assets/js/jquery.selectric.min.js"></script>
+<script src="assets/js/scripts.js"></script>
 </html>
