--- a/public/index.html
+++ b/public/index.html
@@ -31,4 +31,5 @@
 <script src="assets/js/jquery.nicescroll.min.js"></script>
 <script src="assets/js/jquery.selectric.min.js"></script>
 <script src="assets/js/scripts.js"></script>
+<script src="assets/js/jquery.countdown.min.js"></script>
 </html>
